--- a/scenarioA/services/my-account/province/alberta.html
+++ b/scenarioA/services/my-account/province/alberta.html
@@ -310,7 +310,7 @@ Privacy notice and terms and conditions</h1>
 		</li>
 	</ol>
 	<p>By clicking the "I agree" button, you are agreeing to be bound to the Terms and Conditions and are confirming that you understand and agree to the Privacy Notice as well as the consent set above. If you do not agree to the Terms and Conditions, the Privacy Notice or the consent, do not click the "I agree" button, and do not register for or access MSCA. You may still access the services provided by MSCA through other channels by clicking the "Contact us" link below.</p>
-	<p><a class="btn btn-primary" rel="external" href="/MSCA-Prototype/scenarioA/services/my-account/R&A/create-my-profile-sin.html">I agree</a>&nbsp;<a class="btn btn-primary wb-lbx" href="#inline_content">I disagree</a></p>
+	<p><a class="btn btn-primary" rel="external" href="/MSCA-Prototype/scenarioA/services/my-account/R&A/create-my-profile-sin-madi.html">I agree</a>&nbsp;<a class="btn btn-primary wb-lbx" href="#inline_content">I disagree</a></p>
 </section><!-- END h2>Terms and conditions of use -->
 <section id="inline_content" class="mfp-hide modal-dialog modal-content overlay-def">
 	<header class="modal-header">
