--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -278,7 +278,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="">Canadian Retirement Income Calculator </a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">CPP Index</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">OAS Index</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="">Contact us</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="/MSCA-Prototype/scenarioA/services/my-account/cpp-contact.html">Contact us</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
         </ul>
       </div>
     </div>
