--- a/scenarioA/services/my-account/pac/request-a-pac.html
+++ b/scenarioA/services/my-account/pac/request-a-pac.html
@@ -224,11 +224,11 @@ Request a Personal Access Code</h1>
  </section>-->
 <!--end of Alert row-->
         <p>This service allows you to request a personal access code (<abbr>PAC</abbr>). Once you have made your <abbr>PAC</abbr> request, we will mail it to you at the address we have on file.</p>
-  <p>You need your <abbr>PAC</abbr> when you register for <a href="/en/employment-social-development/services/my-account.html">My Service Canada Account</a>. The <abbr>PAC</abbr> is your key to  accessing secure online services - please keep it safe and do not share it with  anyone. </p>  
+  <p>You need your <abbr>PAC</abbr> when you register for <a href="/MSCA-Prototype/scenarioA/services/my-account/chooser-page.html">My Service Canada Account</a>. The <abbr>PAC</abbr> is your key to  accessing secure online services - please keep it safe and do not share it with  anyone. </p>  
   <section>
     <h2>To obtain a personal access code (<abbr>PAC</abbr>), you must:</h2>
     <ul>
-      <li>provide your <a href="http://www.servicecanada.gc.ca/eng/sc/sin/index.shtml">Social Insurance Number</a>, first name, last name, date of birth, and your parent's family name at birth;</li>
+      <li>provide your <a href="">Social Insurance Number</a>, first name, last name, date of birth, and your parent's family name at birth;</li>
       <li>provide your postal code if you are a Canadian resident or your country of residence if you are a foreign resident; and</li>
       <li>have  your JavaScript enabled.</li>
     </ul>
@@ -249,31 +249,31 @@ Request a Personal Access Code</h1>
     <h2>Privacy Notice Statement</h2>
     <p class="well well-sm">You may wish to print this page for future reference as it contains important  information.</p>
     <p>Your privacy  and the protection of your personal information is important to us. We will  confirm your identity by matching the information you submitted on the log-in  page with information contained in the Social Insurance Register, our Canada  Pension Plan (CPP) and/or Old Age Security (OAS) program records. This  information is needed for you to access and use the service you requested.</p>
-    <p>The collection,  use and disclosure of personal information for this service is authorized and  regulated by the <a rel="external" href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">
+    <p>The collection,  use and disclosure of personal information for this service is authorized and  regulated by the <a rel="external" href="">
         Canada Pension Plan  Act
-      </a>, the <a rel="external" href="http://laws-lois.justice.gc.ca/eng/acts/O-9/index.html">
+      </a>, the <a rel="external" href="">
         Old Age Security  Act
-      </a>, and the <a rel="external" href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/">
+      </a>, and the <a rel="external" href="">
         Employment  Insurance Act
-      </a>. Your information may also be used for policy analysis, research and/or  evaluation purposes, which could require that information under the control of  Employment and Social Development Canada and/or Service Canada be linked. In  limited instances, we can share your information without your consent, but will  do so according to the <a rel="external" href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">
+      </a>. Your information may also be used for policy analysis, research and/or  evaluation purposes, which could require that information under the control of  Employment and Social Development Canada and/or Service Canada be linked. In  limited instances, we can share your information without your consent, but will  do so according to the <a rel="external" href="">
         Privacy Act
     </a>.</p>
-    <p>The use,  disclosure, and retention of your personal information for these services are  described in the following <a rel="external" href="http://www.infosource.gc.ca/emp/emp00_e.asp">Personal  Information Banks</a>: Canada Pension Plan SDC PPU 146, Canada Pension Plan SDC PPU  140, Old Age security SDC PPU 116 and Social Insurance Register  SDC PPU 390.</p>
-    <p>The  information you provide is protected under the <a rel="external" href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">
+    <p>The use,  disclosure, and retention of your personal information for these services are  described in the following <a rel="external" href="">Personal  Information Banks</a>: Canada Pension Plan SDC PPU 146, Canada Pension Plan SDC PPU  140, Old Age security SDC PPU 116 and Social Insurance Register  SDC PPU 390.</p>
+    <p>The  information you provide is protected under the <a rel="external" href="">
         Privacy Act
-      </a> and applicable departmental  legislation. Under the Privacy Act, you have the right to access your  personal information and request changes if the information is incorrect.  Instructions on how you can exercise these rights are outlined in <a rel="external" href="http://infosource.gc.ca/index_e.asp">Info Source publications</a>, a copy of which is available  at any Service Canada Centres.</p>
+      </a> and applicable departmental  legislation. Under the Privacy Act, you have the right to access your  personal information and request changes if the information is incorrect.  Instructions on how you can exercise these rights are outlined in <a rel="external" href="">Info Source publications</a>, a copy of which is available  at any Service Canada Centres.</p>
     <p>Questions or  comments regarding the administration of the Privacy Act in our Department may  be directed to the Access to Information and Privacy Coordinator at:</p>
     <p>Access to  Information and Privacy<br>     140 Promenade du Portage<br>     Phase IV, Level 1, Mail stop 112<br>     Gatineau QC  K1A 0J9</p>
-    <p>Tel:  819-654-6981<br>     Fax: 819-953-0659<br>     E-mail: <a href="mailto:NC-COMM-ATIP-AIPRP-GD@hrsdc-rhdcc.gc.ca">NC-COMM-ATIP-AIPRP-GD@hrsdc-rhdcc.gc.ca</a>
+    <p>Tel:  819-654-6981<br>     Fax: 819-953-0659<br>     E-mail: <a href="">NC-COMM-ATIP-AIPRP-GD@hrsdc-rhdcc.gc.ca</a>
     </p>
-    <p>For more information on privacy issues and the Privacy Act in general, consult the <a rel="external" href="http://www.priv.gc.ca/fs-fi/index_e.asp">Office of the Privacy Commissioner</a> or call 1-800-282-1376.</p>
-    <p>For more information on benefits such as Employment Insurance, Canada Pension Plan and Old Age Securty, please <a href="/en/employment-social-development/corporate/contact.html">contact Employment and Social Development Canada</a>.</p>
+    <p>For more information on privacy issues and the Privacy Act in general, consult the <a rel="external" href="">Office of the Privacy Commissioner</a> or call 1-800-282-1376.</p>
+    <p>For more information on benefits such as Employment Insurance, Canada Pension Plan and Old Age Securty, please <a href="">contact Employment and Social Development Canada</a>.</p>
     <ul class="list-unstyled list-inline">
       <li>
-        <a href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=&amp;AppCode=PACR-DCAP" class="btn btn-primary">Continue</a>
+        <a href="/MSCA-Prototype/scenarioA/services/my-account/pac/create-pac.html">Continue</a>
       </li>
       <li>
-        <a href="/en/employment-social-development/services/my-account.html" class="btn btn-primary">Cancel</a>
+        <a href="/MSCA-Prototype/scenarioA/services/my-account/chooser-page.html" class="btn btn-primary">Cancel</a>
       </li>
     </ul>
   </section>
