--- a/scenarioA/services/my-account/pac/create-pac.html
+++ b/scenarioA/services/my-account/pac/create-pac.html
@@ -414,11 +414,14 @@ Date of Birth (Ex: 1947/May/14)<strong class="required"> (required)</strong></le
                 By choosing the "Continue" button, you are submitting your personal information and consenting to its collection, use, and disclosure in accordance with the Personal Information Collection Statement.
             </p>
 
-            <div class="mrgn-tp-lg">
-                <input type="submit" name="ctl00$ctl00$MainContent$ContentPlaceHolder$btnSubmit" value="Continue" id="btnSubmit" class="btn btn-primary active" />
-                <input type="submit" name="ctl00$ctl00$MainContent$ContentPlaceHolder$btnReset" value="Clear" id="btnReset" class="btn btn-default" />
-                
-            </div>
+            	<ul class="list-unstyled list-inline">
+              <li class="mrgn-bttm-sm">
+                <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/pac/confirm-pac.html';" type="button" class="btn btn-primary">Submit</button>
+              </li>
+		<li class="mrgn-bttm-sm">
+                <button onclick="window.location.href = '';" type="button" class="btn btn-default">Clear</button>
+              </li>
+            </ul>
 
         
 
