--- a/scenarioA/services/my-account/pac/pac-form.html
+++ b/scenarioA/services/my-account/pac/pac-form.html
@@ -243,13 +243,13 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 </select>
 </div>
 </div>
-  </div>
+
 	
 	
   <div class="col-sm-4 col-md-3 col-sm-offset-2 col-md-offset-4 col-lg-offset-5">
         <div class="wb-share" data-wb-share='{&#34;lnkClass&#34;: &#34;btn btn-default btn-block&#34;}'></div>
       </div>
-    </div>
+    </div>  </div>
 	<ul class="list-unstyled list-inline">
               <li class="mrgn-bttm-sm">
                 <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/pac/pac-request.html';" type="button" class="btn btn-primary">Submit</button>
