--- a/scenarioA/services/my-account/pac/request-a-pac.html
+++ b/scenarioA/services/my-account/pac/request-a-pac.html
@@ -270,10 +270,10 @@ Request a Personal Access Code</h1>
     <p>For more information on benefits such as Employment Insurance, Canada Pension Plan and Old Age Securty, please <a href="">contact Employment and Social Development Canada</a>.</p>
     <ul class="list-unstyled list-inline">
       <li>
-        <a href="/MSCA-Prototype/scenarioA/services/my-account/pac/create-pac.html">Continue</a>
+        <a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/pac/create-pac.html">Continue</a>
       </li>
       <li>
-        <a href="/MSCA-Prototype/scenarioA/services/my-account/chooser-page.html" class="btn btn-primary">Cancel</a>
+        <a href="/MSCA-Prototype/scenarioA/services/my-account/chooser-page.html" class="btn btn-default">Cancel</a>
       </li>
     </ul>
   </section>
