--- a/scenarioA/services/my-account/find-pac.html
+++ b/scenarioA/services/my-account/find-pac.html
@@ -243,19 +243,19 @@ Help finding your access code</h1>
             <img src="https://www.canada.ca/content/dam/canada/employment-social-development/migration/images/assets/portfolio/images/training/features/dis_eng.jpg">
           </a>
         </p>
-        <p>If you cannot find your Personal Access Code, you can <a href="">request a new code</a>. </p>
+        <p>If you cannot find your Personal Access Code, you can <a href="/MSCA-Prototype/scenarioA/services/my-account/pac/request-a-pac.html">request a new code</a>. </p>
       </section>
     </div>
     <div class="col-md-4">
       <section>
         <h3>Previously requested a personal access code</h3>
-        <p>If you previously requested a personal access code through the <a href="">Request a Personal Access Code</a> online form, it was sent to you in a PAC letter.</p>
+        <p>If you previously requested a personal access code through the <a href="/MSCA-Prototype/scenarioA/services/my-account/pac/request-a-pac.html">Request a Personal Access Code</a> online form, it was sent to you in a PAC letter.</p>
         <p class="text-center">
           <a href="http://www.esdc.gc.ca/assets/portfolio/images/training/features/isp_eng_1.jpg" class="wb-lbx">
             <img src="https://www.canada.ca/content/dam/canada/employment-social-development/migration/images/assets/portfolio/images/training/features/isp_eng.jpg">
           </a>
         </p>
-        <p>If you cannot find your Personal Access Code, you can <a href="">request a new code</a>.</p>
+        <p>If you cannot find your Personal Access Code, you can <a href="/MSCA-Prototype/scenarioA/services/my-account/pac/request-a-pac.html">request a new code</a>.</p>
       </section>
     </div>
   </div>
