--- a/scenarioA/services/my-account/sign-in-partner/register.html
+++ b/scenarioA/services/my-account/sign-in-partner/register.html
@@ -228,7 +228,7 @@ My Service Canada Account: Register with your bank</h1>
     <li>a verified <a href="#partners">Sign-in Partner</a></li>
     <li>an access code</li>
 </ul>
-  <p>We may have  sent you an access code if you've applied for or are receiving Employment  Insurance (EI), Canada Pension Plan (CPP), or Old Age Security (OAS). <a href="">Need help finding it</a>?</p>
+  <p>We may have  sent you an access code if you've applied for or are receiving Employment  Insurance (EI), Canada Pension Plan (CPP), or Old Age Security (OAS). <a href="/MSCA-Prototype/scenarioA/services/my-account/find-pac.html">Need help finding it</a>?</p>
 	
 
 <div class="well">
