--- a/scenarioA/services/my-account/chooser-page.html
+++ b/scenarioA/services/my-account/chooser-page.html
@@ -211,7 +211,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <div class="col-md-6">
 	<div class="alert alert-info hght-inhrt mrgn-bttm-0">
 	<h2 class="h3">Sign in with your province:</h2>	
-	<p>Alberta and British Columbia residents can access My Service Canada Account using their provincial digital ID (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions.html">MyAlberta Digital ID</a>, <a href="#">BC Services Card</a>) </p><br /><br /><br />
+	<p>Alberta residents can access My Service Canada Account using their provincial digital ID (<a href="/MSCA-Prototype/scenarioA/services/my-account/province/privacy-notice-term-conditions.html">MyAlberta Digital ID</a>) </p><br /><br /><br />
 	</div>
 </div>	
 		
@@ -245,7 +245,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 	</li>
 	
 	<li class="col-md-4">
-		<a href="/MSCA-Prototype/scenarioA/services/my-account/sign-in-partner/sign-in.html" class="btn btn-red large-btn">
+		<a href="" class="btn btn-red large-btn">
 			<div class="icon-btn"><img src="/MSCBA-Prototype-NoNav/bank-white.png" alt=""></div>
 			<div class="label-btn"><b>Sign in  with your bank</b></div>
 		</a>
@@ -259,7 +259,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 		</a>		
 		<p>Use your provincial digital ID.</p>
 		
-		<p><strong><small>* Alberta and British Columbia only</small></strong></p>
+		<p><strong><small>* Alberta only</small></strong></p>
 	</li>
 	
 </ul>
