--- a/scenarioA/services/my-account/sign-in-partner/register.html
+++ b/scenarioA/services/my-account/sign-in-partner/register.html
@@ -253,7 +253,7 @@ My Service Canada Account: Register with your bank</h1>
 
 
 <p>If your bank is a Sign-in Partner and you already have an access code:<br>
-<a href="/MSCA-Prototype/scenarioA/services/my-account/sign-in-partner/sign-in.html" class="btn btn-primary">Register now</a></p>
+<a href="" class="btn btn-primary">Register now</a></p>
 
 <section>
 <h2 id="determine-partner">1. Determine if your bank is a verified Sign-in Partner</h2>
@@ -364,7 +364,7 @@ My Service Canada Account: Register with your bank</h1>
   <li>your access code</li>
   <li>your Social Insurance Number (SIN)</li>
 </ul>
-<p><a href="/MSCA-Prototype/scenarioA/services/my-account/sign-in-partner/sign-in.html" class="btn btn-primary">Register now</a></p>
+<p><a href="" class="btn btn-primary">Register now</a></p>
 <p>Note: you will temporarily leave the ESDC and Service Canada  site to use your Sign-In Partner.</p>
 </section>
 
