--- a/scenarioA/services/my-account/sign-in-partner/register.html
+++ b/scenarioA/services/my-account/sign-in-partner/register.html
@@ -357,7 +357,7 @@ My Service Canada Account: Register with your bank</h1>
 
 <section>
 <h2 id="sign-up-gckey">4. Register for MSCA with Sign-in Partner</h2>
-<p>If you have a joint bank account, only one of the  two people can register for MSCA with the shared account. The second person  must use a different Sign-In Partner account, create a GCKey account or use  their provincial digital ID account (Alberta and British Columbia only).</p>
+<p>If you have a joint bank account, only one of the  two people can register for MSCA with the shared account. The second person  must use a different Sign-In Partner account, create a GCKey account or use  their provincial digital ID account (Alberta only).</p>
 <p><strong>None of your information (for example, financial, banking) will be  shared with Employment and Social Development Canada (ESDC) and Service Canada.  Your Sign-In Partner will not know which government service you are using.</strong></p>
 <p>Are you ready to register? You will need:</p>
 <ul>
