--- a/scenarioA/services/my-account/sign-in-partner/register.html
+++ b/scenarioA/services/my-account/sign-in-partner/register.html
@@ -287,7 +287,7 @@ My Service Canada Account: Register with your bank</h1>
   <p><strong>You can request an access code:</strong></p>
 	<details>
     <summary>Online</summary>
-		<p class="mrgn-tp-md"><a href="https://www.canada.ca/en/employment-social-development/services/my-account/request-pac.html" class="btn btn-primary">Request access code</a></p>
+		<p class="mrgn-tp-md"><a href="/MSCA-Prototype/scenarioA/services/my-account/pac/request-a-pac.html" class="btn btn-primary">Request access code</a></p>
 	
 		<p>You will need:</p>
 		  <ul>
@@ -303,7 +303,7 @@ My Service Canada Account: Register with your bank</h1>
 	
 	<details>
 		<summary>In person at a  Service Canada Office</summary>
-    	<p class="mrgn-tp-md"><a href="http://www.servicecanada.gc.ca/tbsc-fsco/sc-hme.jsp?lang=eng" class="btn btn-primary">Find a Service Canada Office</a></p>
+    	<p class="mrgn-tp-md"><a href="" class="btn btn-primary">Find a Service Canada Office</a></p>
 		
 		<p>You will need:</p>
 		  <ul>
