--- a/scenarioA/services/my-account/GCKey/register.html
+++ b/scenarioA/services/my-account/GCKey/register.html
@@ -263,7 +263,7 @@ My Service Canada Account: Register with GCKey</h1>
 	
 	<details>
     <summary>Online</summary>
-		<p class="mrgn-tp-md"><a href="https://www.canada.ca/en/employment-social-development/services/my-account/request-pac.html" class="btn btn-primary">Request access code</a></p>
+		<p class="mrgn-tp-md"><a href="/MSCA-Prototype/scenarioA/services/my-account/pac/request-a-pac.html" class="btn btn-primary">Request access code</a></p>
 	
 		<p>You will need:</p>
 		  <ul>
@@ -279,7 +279,7 @@ My Service Canada Account: Register with GCKey</h1>
 	
 	<details>
 		<summary>In person at a  Service Canada Office</summary>
-    	<p class="mrgn-tp-md"><a href="http://www.servicecanada.gc.ca/tbsc-fsco/sc-hme.jsp?lang=eng" class="btn btn-primary">Find a Service Canada Office</a></p>
+    	<p class="mrgn-tp-md"><a href="" class="btn btn-primary">Find a Service Canada Office</a></p>
 		
 		<p>You will need:</p>
 		  <ul>
