--- a/scenarioA/services/my-account/GCKey/register.html
+++ b/scenarioA/services/my-account/GCKey/register.html
@@ -232,13 +232,13 @@ My Service Canada Account: Register with GCKey</h1>
 <div class="well">
 	<h2 class="h4 mrgn-tp-0 mrgn-bttm-md">How  to register for MSCA with GCKey</h2>
 	<ol class="row list-unstyled hidden-xs">
-	<li class="col-md-3"><a href="#request-code" class="text-center"><img src="/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>Request access code</a></li>
+	<li class="col-md-3"><a href="#request-code" class="text-center"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/request-code.png" class="center-block" alt=""><br>Request access code</a></li>
 
-	<li class="col-md-3"><a href="#receive-code"><img src="/content/dam/esdc-edsc/images/services/msca-mdsc/mail-arrival.png" class="center-block" alt=""><br>Receive access code</a></li>
+	<li class="col-md-3"><a href="#receive-code"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/mail-arrival.png" class="center-block" alt=""><br>Receive access code</a></li>
 
-	<li class="col-md-3"><a href="#sign-up-gckey"><img src="/content/dam/esdc-edsc/images/services/msca-mdsc/GCKey.png" class="center-block" alt=""><br>Sign up for GCKey (if you don’t have it)</a></li>
+	<li class="col-md-3"><a href="#sign-up-gckey"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/GCKey.png" class="center-block" alt=""><br>Sign up for GCKey (if you don’t have it)</a></li>
 
-	<li class="col-md-3"><a href="#register-msca"><img src="/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>Register for MSCA with your GCKey</a></li>
+	<li class="col-md-3"><a href="#register-msca"><img src="https://canada-preview.adobecqms.net/content/dam/esdc-edsc/images/services/msca-mdsc/review.png" class="center-block" alt=""><br>Register for MSCA with your GCKey</a></li>
  </ol>
 	
 	<ol class="visible-xs">
