--- a/scenarioA/services/my-account/chooser-page-fr.html
+++ b/scenarioA/services/my-account/chooser-page-fr.html
@@ -220,7 +220,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0">
         <h2 class="mrgn-tp-0 h3">Poser une question à notre clavarbot!</h2>
         <p>Notre pilote clavarbot peut vous guider avec des questions générales concernant votre compte MDSC. Il ne peut pas vérifier l&rsquo;état de votre demande ou être utilisé pour déposer une plainte.</p>
-        <p><a href="">Terms of Use and Information Statement</a></p>
+        <p><a href="#">Terms of Use and Information Statement</a></p>
         <button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Lancer l'outil de clavarbot</button>
       </div>
       <div id="sccChat"></div>
@@ -241,7 +241,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
           </a>
           <p>Utiliser la CléGC pour accéder aux multiples services en ligne du gouvernement du Canada.</p>
         </li>
-        <li class="col-md-4"> <a href="" class="btn btn-red large-btn">
+        <li class="col-md-4"> <a href="#" class="btn btn-red large-btn">
           <div class="icon-btn"><img src="/MSCBA-Prototype-NoNav/bank-white.png" alt=""></div>
           <div class="label-btn"><b>Ouvrir une session avec votre banque</b></div>
           </a>
@@ -309,19 +309,19 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
   <section>
     <h2>Ce que vous pouvez faire dans MDSC</h2>
     <ul>
-      <li><a href="">Services de l'assurance-emploi</a></li>
-      <li><a href="">Services du Régime de pensions du Canada et de la Sécurité de la vieillesse</a></li>
-      <li><a href="">Renseignements sur les impôts</a></li>
+      <li><a href="#">Services de l'assurance-emploi</a></li>
+      <li><a href="#">Services du Régime de pensions du Canada et de la Sécurité de la vieillesse</a></li>
+      <li><a href="#">Renseignements sur les impôts</a></li>
     </ul>
   </section>
   <section>
     <h2>Coordonnées</h2>
     <p>Contacter les programmes suivants si vous avez des questions :</p>
     <ul class="text-center list-unstyled colcount-md-4">
-      <li class="brdr-rght"><a href="">Communiquer avec les responsables du numéro d’assurance sociale</a></li>
-      <li class="brdr-rght"><a href="">Communiquer avec les responsables de l'assurance-emploi</a></li>
-      <li class="brdr-rght"><a href="">Communiquer avec les responsables du Régime de pensions du Canada</a></li>
-      <li><a href="">Communiquer avec les responsables de la Sécurité de la vieillesse</a></li>
+      <li class="brdr-rght"><a href="#">Communiquer avec les responsables du numéro d’assurance sociale</a></li>
+      <li class="brdr-rght"><a href="#">Communiquer avec les responsables de l'assurance-emploi</a></li>
+      <li class="brdr-rght"><a href="#">Communiquer avec les responsables du Régime de pensions du Canada</a></li>
+      <li><a href="#">Communiquer avec les responsables de la Sécurité de la vieillesse</a></li>
     </ul>
   </section>
   </div>
@@ -454,16 +454,16 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <nav class="container wb-navcurr">
         <h2 class="wb-inv">À propos du gouvernement</h2>
         <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-          <li><a href="">Au sujet du gouvernement
+          <li><a href="#">Au sujet du gouvernement
             Contactez-nous </a></li>
-          <li><a href="">Ministères et organismes</a></li>
-          <li><a href="">Fonction publique et force militaire</a></li>
-          <li><a href="">Nouvelles</a></li>
-          <li><a href="">Traités, lois et règlements</a></li>
-          <li><a href="">Rapports à l'échelle du gouvernement</a></li>
-          <li><a href="">Premier ministre</a></li>
-          <li><a href="">À propos du gouvernement</a></li>
-          <li><a href="">Gouvernement ouvert</a></li>
+          <li><a href="#">Ministères et organismes</a></li>
+          <li><a href="#">Fonction publique et force militaire</a></li>
+          <li><a href="#">Nouvelles</a></li>
+          <li><a href="#">Traités, lois et règlements</a></li>
+          <li><a href="#">Rapports à l'échelle du gouvernement</a></li>
+          <li><a href="#">Premier ministre</a></li>
+          <li><a href="#">À propos du gouvernement</a></li>
+          <li><a href="#">Gouvernement ouvert</a></li>
         </ul>
       </nav>
     </div>
@@ -473,11 +473,11 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
           <nav class="col-md-10 ftr-urlt-lnk">
             <h2 class="wb-inv">À propos de ce site</h2>
             <ul>
-              <li><a href="">Médias sociaux</a></li>
+              <li><a href="#">Médias sociaux</a></li>
               <li><a href="/en/mobile.html">Applications mobiles</a></li>
-              <li><a href="">À propos de Canada.ca</a></li>
-              <li><a href="">Avis</a></li>
-              <li><a href="">Confidentialité</a></li>
+              <li><a href="#">À propos de Canada.ca</a></li>
+              <li><a href="#">Avis</a></li>
+              <li><a href="#">Confidentialité</a></li>
             </ul>
           </nav>
           <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
