--- a/scenarioA/services/my-account/GCKey/register-fr.html
+++ b/scenarioA/services/my-account/GCKey/register-fr.html
@@ -216,7 +216,7 @@ Mon dossier Service Canada&nbsp;: Inscription avec la CléGC</h1>
 
 
     
-    <div class="row"><aside class="col-xs-12"><div class="well well-sm small brdr-0"><h2 class="mrgn-tp-0 h3">Poser une question à notre clavarbot!</h2><p>Notre pilote clavarbot peut vous guider avec des questions générales concernant votre compte MDSC. Il ne peut pas vérifier l’état de votre demande ou être utilisé pour déposer une plainte.</p><p><a href="">Modalités d'utilisation et Avis d’information</a></p><button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Lancer l'outil de clavarbot</button></div><div id="sccChat"></div></aside></div>
+    <div class="row"><aside class="col-xs-12"><div class="well well-sm small brdr-0"><h2 class="mrgn-tp-0 h3">Poser une question à notre clavarbot!</h2><p>Notre pilote clavarbot peut vous guider avec des questions générales concernant votre compte MDSC. Il ne peut pas vérifier l’état de votre demande ou être utilisé pour déposer une plainte.</p><p><a href="#">Modalités d'utilisation et Avis d’information</a></p><button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Lancer l'outil de clavarbot</button></div><div id="sccChat"></div></aside></div>
 	
 
 
@@ -278,7 +278,7 @@ Mon dossier Service Canada&nbsp;: Inscription avec la CléGC</h1>
 	
 	<details>
 		<summary>En personne dans un bureau de Service Canada</summary>
-    	<p class="mrgn-tp-md"><a href="" class="btn btn-primary">Trouver un bureau de Service Canada</a></p>
+    	<p class="mrgn-tp-md"><a href="#" class="btn btn-primary">Trouver un bureau de Service Canada</a></p>
 		
 		<p>Voici ce dont vous aurez besoin&nbsp;:</p>
 		  <ul>
@@ -330,7 +330,7 @@ Mon dossier Service Canada&nbsp;: Inscription avec la CléGC</h1>
 	
 <section>
 	<h2 id="sign-up-gckey">3. Obtenir une CléGC (si vous n’en avez pas) </h2>
-	<p>Utilisez votre CléGC pour accéder aux multiples <a href="">Services en ligne</a> du gouvernement du Canada.</p>
+	<p>Utilisez votre CléGC pour accéder aux multiples <a href="#">Services en ligne</a> du gouvernement du Canada.</p>
 	<p>Si vous n’en avez pas déjà une, <a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-in-fr.html">inscrivez-vous au service CléGC</a> en créant un nom d’utilisateur et un mot de passe. Si vous avez oublié votre nom d’utilisateur CléGC, vous devrez en créer un nouveau.</p>
 </section>
 	
@@ -447,16 +447,16 @@ Mon dossier Service Canada&nbsp;: Inscription avec la CléGC</h1>
       <nav class="container wb-navcurr">
         <h2 class="wb-inv">À propos du gouvernement</h2>
         <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-          <li><a href="">Au sujet du gouvernement
+          <li><a href="#">Au sujet du gouvernement
             Contactez-nous </a></li>
-          <li><a href="">Ministères et organismes</a></li>
-          <li><a href="">Fonction publique et force militaire</a></li>
-          <li><a href="">Nouvelles</a></li>
-          <li><a href="">Traités, lois et règlements</a></li>
-          <li><a href="">Rapports à l'échelle du gouvernement</a></li>
-          <li><a href="">Premier ministre</a></li>
-          <li><a href="">À propos du gouvernement</a></li>
-          <li><a href="">Gouvernement ouvert</a></li>
+          <li><a href="#">Ministères et organismes</a></li>
+          <li><a href="#">Fonction publique et force militaire</a></li>
+          <li><a href="#">Nouvelles</a></li>
+          <li><a href="#">Traités, lois et règlements</a></li>
+          <li><a href="#">Rapports à l'échelle du gouvernement</a></li>
+          <li><a href="#">Premier ministre</a></li>
+          <li><a href="#">À propos du gouvernement</a></li>
+          <li><a href="#">Gouvernement ouvert</a></li>
         </ul>
       </nav>
     </div>
@@ -466,11 +466,11 @@ Mon dossier Service Canada&nbsp;: Inscription avec la CléGC</h1>
           <nav class="col-md-10 ftr-urlt-lnk">
             <h2 class="wb-inv">À propos de ce site</h2>
             <ul>
-              <li><a href="">Médias sociaux</a></li>
+              <li><a href="#">Médias sociaux</a></li>
               <li><a href="/en/mobile.html">Applications mobiles</a></li>
-              <li><a href="">À propos de Canada.ca</a></li>
-              <li><a href="">Avis</a></li>
-              <li><a href="">Confidentialité</a></li>
+              <li><a href="#">À propos de Canada.ca</a></li>
+              <li><a href="#">Avis</a></li>
+              <li><a href="#">Confidentialité</a></li>
             </ul>
           </nav>
           <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
