--- a/scenarioA/services/my-account/province/alberta-fr.html
+++ b/scenarioA/services/my-account/province/alberta-fr.html
@@ -430,16 +430,16 @@ Privacy notice and terms and conditions</h1>
       <nav class="container wb-navcurr">
         <h2 class="wb-inv">À propos du gouvernement</h2>
         <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-          <li><a href="">Au sujet du gouvernement
+          <li><a href="#">Au sujet du gouvernement
             Contactez-nous </a></li>
-          <li><a href="">Ministères et organismes</a></li>
-          <li><a href="">Fonction publique et force militaire</a></li>
-          <li><a href="">Nouvelles</a></li>
-          <li><a href="">Traités, lois et règlements</a></li>
-          <li><a href="">Rapports à l'échelle du gouvernement</a></li>
-          <li><a href="">Premier ministre</a></li>
-          <li><a href="">À propos du gouvernement</a></li>
-          <li><a href="">Gouvernement ouvert</a></li>
+          <li><a href="#">Ministères et organismes</a></li>
+          <li><a href="#">Fonction publique et force militaire</a></li>
+          <li><a href="#">Nouvelles</a></li>
+          <li><a href="#">Traités, lois et règlements</a></li>
+          <li><a href="#">Rapports à l'échelle du gouvernement</a></li>
+          <li><a href="#">Premier ministre</a></li>
+          <li><a href="#">À propos du gouvernement</a></li>
+          <li><a href="#">Gouvernement ouvert</a></li>
         </ul>
       </nav>
     </div>
@@ -449,11 +449,11 @@ Privacy notice and terms and conditions</h1>
           <nav class="col-md-10 ftr-urlt-lnk">
             <h2 class="wb-inv">À propos de ce site</h2>
             <ul>
-              <li><a href="">Médias sociaux</a></li>
+              <li><a href="#">Médias sociaux</a></li>
               <li><a href="/en/mobile.html">Applications mobiles</a></li>
-              <li><a href="">À propos de Canada.ca</a></li>
-              <li><a href="">Avis</a></li>
-              <li><a href="">Confidentialité</a></li>
+              <li><a href="#">À propos de Canada.ca</a></li>
+              <li><a href="#">Avis</a></li>
+              <li><a href="#">Confidentialité</a></li>
             </ul>
           </nav>
           <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
