--- a/scenarioA/services/my-account/chooser-page-fr.html
+++ b/scenarioA/services/my-account/chooser-page-fr.html
@@ -71,7 +71,7 @@
           </div>
         </section>
         <div class="row">
-          <div class="brand col-xs-5 col-md-4" property="publisher" typeof="GovernmentOrganization"> <a href="/fr.html" property="url"> <img src="/etc/designs/canada/wet-boew/assets/sig-blk-fr.svg" alt="" property="logo"> <span class="wb-inv" property="name"> Gouvernement du Canada</span> </a>
+          <div class="brand col-xs-5 col-md-4" property="publisher" typeof="GovernmentOrganization"> <a href="/fr.html" property="url"> <img src="https://canada-preview.adobecqms.net/etc/designs/canada/wet-boew/assets/sig-blk-fr.svg" alt="" property="logo"> <span class="wb-inv" property="name"> Gouvernement du Canada</span> </a>
             <meta property="areaServed" typeof="Country" content="Canada"/>
             <link property="logo" href="/etc/designs/canada/wet-boew/assets/wmms-blk.svg"/>
           </div>
@@ -220,7 +220,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0">
         <h2 class="mrgn-tp-0 h3">Poser une question à notre clavarbot!</h2>
         <p>Notre pilote clavarbot peut vous guider avec des questions générales concernant votre compte MDSC. Il ne peut pas vérifier l&rsquo;état de votre demande ou être utilisé pour déposer une plainte.</p>
-        <p><a href="#">Terms of Use and Information Statement</a></p>
+        <p><a href="#">Modalités d'utilisation et Avis d’information</a></p>
         <button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Lancer l'outil de clavarbot</button>
       </div>
       <div id="sccChat"></div>
