--- a/scenarioA/services/my-account/sign-in-partner/register-fr.html
+++ b/scenarioA/services/my-account/sign-in-partner/register-fr.html
@@ -71,7 +71,7 @@
           </div>
         </section>
         <div class="row">
-          <div class="brand col-xs-5 col-md-4" property="publisher" typeof="GovernmentOrganization"> <a href="/fr.html" property="url"> <img src="/etc/designs/canada/wet-boew/assets/sig-blk-fr.svg" alt="" property="logo"> <span class="wb-inv" property="name"> Gouvernement du Canada</span> </a>
+          <div class="brand col-xs-5 col-md-4" property="publisher" typeof="GovernmentOrganization"> <a href="/fr.html" property="url"> <img src="https://canada-preview.adobecqms.net/etc/designs/canada/wet-boew/assets/sig-blk-fr.svg" alt="" property="logo"> <span class="wb-inv" property="name"> Gouvernement du Canada</span> </a>
             <meta property="areaServed" typeof="Country" content="Canada"/>
             <link property="logo" href="/etc/designs/canada/wet-boew/assets/wmms-blk.svg"/>
           </div>
