--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -289,12 +289,12 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>-->
        <p>You can now switch to your Canada Revenue Agency (CRA) account without having to log in again to view and manage your:
 			<ul>
-				<li>tax returns;</li>
-				<li>tax credits;</li>
-				<li>account balance;</li>
-				<li>Registered Retirement Savings Plan (RRSP);</li>
-				<li>Tax Free Savings Account (TFSA); and</li>
-				<li>Canada Child Benefits.</li>
+				<li>tax returns</li>
+				<li>tax credits</li>
+				<li>account balance</li>
+				<li>Registered Retirement Savings Plan (RRSP)</li>
+				<li>Tax Free Savings Account (TFSA)</li>
+				<li>Canada Child Benefits</li>
 		  </ul>
 	  
         <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Access CRA</a> 
