--- a/scenarioA/services/my-account/pac/create-pac-fr.html
+++ b/scenarioA/services/my-account/pac/create-pac-fr.html
@@ -86,7 +86,7 @@
                 <input name="langs" value="en" type="hidden"/>
                 <input name="st1rt" value="1" type="hidden"/>
                 <input name="s5bm3ts21rch" value="x" type="hidden"/>
-                <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Rechercher dans Canada.ca"/>
+                <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Search Canada.ca"/>
                 <input type="hidden" name="_charset_" value="UTF-8"/>
                 <datalist id="wb-srch-q-ac"> </datalist>
               </div>
@@ -203,10 +203,6 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
     </header>
   </div>
 </div>
-
-	
-
-
 
 
 <div class="container">
@@ -467,7 +463,10 @@ Date de naissance (p. ex., 1947 mai 14)<strong class="required"> (obligatoire)</
       </div>
     </div>
 	
-</main></div>
+				</main></div></div>	
+	
+	
+	
 <footer>
   <div id="wb-info">
     <div class="landscape">
