--- a/scenarioA/services/my-account/find-pac-fr.html
+++ b/scenarioA/services/my-account/find-pac-fr.html
@@ -231,7 +231,7 @@ Trouvez votre code d’accès</h1>
             <img src="https://canada-preview.adobecqms.net/content/dam/canada/employment-social-development/migration/images/assets/portfolio/images/training/features/bso_fra.jpg">
           </a>
         </p>
-        <p>Si vous ne pouvez trouver votre code d’accès d’assurance emploi, appelez au 1 800 808 6352, entre 8 h 30 et 16 h 30, heure locale, ou rendez-vous à votre <a href="http://www.servicecanada.gc.ca/cgi-bin/sc-srch.cgi?app=hme&amp;ln=fra">bureau de Service Canada</a> (votre identité devra être validée).</p>
+        <p>Si vous ne pouvez trouver votre code d’accès d’assurance emploi, appelez au 1 800 808 6352, entre 8 h 30 et 16 h 30, heure locale, ou rendez-vous à votre <a href="#">bureau de Service Canada</a> (votre identité devra être validée).</p>
       </section>
     </div>
     <div class="col-md-4">
