--- a/scenarioA/services/my-account/GCKey/sign-up-step-2-fr.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-step-2-fr.html
@@ -134,9 +134,9 @@
           Veuillez s&eacute;lectionner <strong>Continuer</strong> pour poursuivre ou <strong>Annuler</strong> pour mettre fin &agrave; ce processus.
          </p>
          <div class="form-group form-buttons">
-                      <p style="text-align:center";> <a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-3-fr.html">Continue</a>
-                        <input type="submit" class="cancel btn btn-default" name="_eventId_reset" id="button2" value="Clear All" title="Information entered will be cleared" style="margin-left:auto; margin-right:auto"/>
-                        <input type="submit" class="cancel btn btn-default" name="_eventId_cancel" id="Cancel" value="Cancel" title="Cancel the process" style="margin-left:auto; margin-right:auto"/>
+                      <p style="text-align:center";> <a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-3-fr.html">Continuer</a>
+                        <input type="submit" class="cancel btn btn-default" name="_eventId_reset" id="button2" value="Effacer tout" title="Information entered will be cleared" style="margin-left:auto; margin-right:auto"/>
+                        <input type="submit" class="cancel btn btn-default" name="_eventId_cancel" id="Cancel" value="Annuler" title="Cancel the process" style="margin-left:auto; margin-right:auto"/>
                       </p>
                     </div>
         </div>
