--- a/scenarioA/services/my-account/R&A/create-my-profile-fr.html
+++ b/scenarioA/services/my-account/R&A/create-my-profile-fr.html
@@ -410,7 +410,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
         <p tabindex="0" class="mrgn-tp-lg">&nbsp;</p>
 			
             <div class="mrgn-tp-lg">
-                <a class="btn btn-primary active" name="ctl00$ctl00$MainContent$ContentPlaceHolder$btnSubmit" id="btnSubmit" href="/MSCA-Prototype/scenarioA/services/my-account/R&A/confirm-my-profile.html">Continuer</a>  
+                <a class="btn btn-primary active" name="ctl00$ctl00$MainContent$ContentPlaceHolder$btnSubmit" id="btnSubmit" href="/MSCA-Prototype/scenarioA/services/my-account/R&A/confirm-my-profile-fr.html">Continuer</a>  
                <!-- <input type="submit" name="ctl00$ctl00$MainContent$ContentPlaceHolder$btnReset" value="Clear" id="btnReset" class="btn btn-default" />-->
                 <input type="submit" name="ctl00$ctl00$MainContent$ContentPlaceHolder$btnBack" value="Effacer" id="btnBack" class="btn btn-default" />
             </div>
