--- a/scenarioA/services/my-account/pac/create-pac.html
+++ b/scenarioA/services/my-account/pac/create-pac.html
@@ -10,6 +10,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <title>Access Record of Employment on the web (ROE Web) - Canada.ca</title>
+	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+ 	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>  
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <link rel="schema.dcterms" href="https://www.canada.ca/purl.org/dc/terms/"/>
 <meta name="description" content="My Service Canada Account"/>
@@ -299,9 +303,9 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <div class="clearfix"></div>
 <div class="row">
 <fieldset class="panel inline-panel">
-<legend class="col-md-6 required mrgn-tp-sm ">
-Date of Birth (Ex: 1947/May/14)<strong class="required"> (required)</strong></legend>
-<div class="col-md-6 mrgn-bttm-sm no-row-left-margin">
+<label class="col-md-6 required mrgn-tp-sm ">
+Date of Birth (Ex: 1947/May/14)<strong class="required"> (required)</strong></label>
+<div class="col-md-5 mrgn-bttm-sm no-row-left-margin">
 <div class="dob-year">
 <label for="pidate_of_birth_year">Year</label>
 <input type="text" id="pidate_of_birth_year" name="pidate_of_birth_year" class="form-control" value="" maxlength="4" size="4" autocomplete="off" />
