--- a/scenarioA/services/my-account/pac/create-pac-fr.html
+++ b/scenarioA/services/my-account/pac/create-pac-fr.html
@@ -10,6 +10,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <title>Access Record of Employment on the web (ROE Web) - Canada.ca</title>
+	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+ 	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>  
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <link rel="schema.dcterms" href="https://www.canada.ca/purl.org/dc/terms/"/>
 <meta name="description" content="My Service Canada Account"/>
@@ -302,8 +306,8 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <div class="clearfix"></div>
 <div class="row">
 <fieldset class="panel inline-panel">
-<legend class="col-md-6 required mrgn-tp-sm ">
-Date de naissance (p. ex., 1947 mai 14)<strong class="required"> (obligatoire)</strong></legend>
+<label class="col-md-6 required mrgn-tp-sm ">
+Date de naissance (p. ex., 1947 mai 14)<strong class="required"> (obligatoire)</strong></label>
 <div class="col-md-6 mrgn-bttm-sm no-row-left-margin">
 <div class="dob-year">
 <label for="pidate_of_birth_year">Année</label>
