--- a/scenarioA/services/my-account/pac/confirm-pac-fr.html
+++ b/scenarioA/services/my-account/pac/confirm-pac-fr.html
@@ -4,12 +4,16 @@
 <html class="no-js lt-ie9" dir="ltr" lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" dir="ltr" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="en" dir="ltr">
 <!--<![endif]-->
 <head prefix="og: http://ogp.me/ns#">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <title>Access Record of Employment on the web (ROE Web) - Canada.ca</title>
+	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+ 	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>  
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <link rel="schema.dcterms" href="https://www.canada.ca/purl.org/dc/terms/"/>
 <meta name="description" content="My Service Canada Account"/>
