--- a/scenarioA/services/my-account/pac/pac-form-fr.html
+++ b/scenarioA/services/my-account/pac/pac-form-fr.html
@@ -4,7 +4,7 @@
 <html class="no-js lt-ie9" dir="ltr" lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" dir="ltr" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="en" dir="ltr">
 <!--<![endif]-->
 <head prefix="og: http://ogp.me/ns#">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -214,18 +214,20 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
  <div class="well">
 	 <p><strong>Je suis un résident canadien</strong></p>
 	 <div class="row mrgn-tp-md">
+		 <div class="row">
                         <div class="col-md-5">
                             <label for="urnROE" class="control-label">Code postal : (exemple: K1A2B3)</label>
-</div>
+			 </div></div>
+		 <div class="row">
 <div class="col-md-4">
 <input type="text" id="urnROE" name="urnROE" class="form-control" value="" maxlength="100" size="option2RoeUrnP option2RoeUrnExample" autocomplete="off"/>
 
 
-       </div>
-                        
-    </div>
+			 </div>
+		 </div></div>
 	<hr />
 	 <p><strong>Je réside à l'étranger </strong></p>
+	 <div class="row">
 	 <div class="col-md-4">
 <div class="form-group">
 <label for="dt_corecategory">Pays :</label>
@@ -244,7 +246,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <option value="Azerbaijan">Azerbaijan</option>
 </select>
 </div>
-</div>
+		 </div></div>
 
 	
 	
