--- a/scenarioA/services/my-account/R&A/privacy-notice-terms-and-conditions-fr.html
+++ b/scenarioA/services/my-account/R&A/privacy-notice-terms-and-conditions-fr.html
@@ -10,6 +10,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <title>Access Record of Employment on the web (ROE Web) - Canada.ca</title>
+	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+ 	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>  
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <link rel="schema.dcterms" href="https://www.canada.ca/purl.org/dc/terms/"/>
 <meta name="description" content="My Service Canada Account"/>
