--- a/scenarioA/services/my-account/R&A/create-my-profile-madi-fr.html
+++ b/scenarioA/services/my-account/R&A/create-my-profile-madi-fr.html
@@ -10,6 +10,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <title>Access Record of Employment on the web (ROE Web) - Canada.ca</title>
+	<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+ 
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script> 
+
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+        <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>   
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <link rel="schema.dcterms" href="https://www.canada.ca/purl.org/dc/terms/"/>
 <meta name="description" content="My Service Canada Account"/>
@@ -485,7 +491,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 	            <script type="text/javascript">
 	                var secondarymenu = document.getElementById("wb-sec");
 	                secondarymenu.innerHTML = wet.builder.secmenu(
-	                    {"sections":[{"sectionName":"Menu","menuLinks":[{"href":"###","text":"Help"},{"href":"###","text":"Frequently asked questions (FAQs)"},{"href":"###","text":"ROE Web Terms and Conditions"},{"href":"###","text":"Log Out"}]}]}
+	                    {"sections":[{"sectionName":"Menu","menuLinks":[{"href":"###","text":"Aide"},{"href":"###","text":"Foire aux questions (FAQ)"},{"href":"###","text":"Fermer la session"}]}]}
 	                );
 	            </script>	
              </div>
