--- a/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-step-1-fr.html
@@ -6,7 +6,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta charset="utf-8" />
-
+<link rel="stylesheet" href="https://clegc-gckey.gc.ca/j/css/fuelux.min.css"> 
 <!-- H0-01 1.2.4 -->
 <title>GCKey - Sign In / Sign Up</title>
 <meta name="dcterms.description" content="English description / Description en anglais" />
